iac/02-compute.tf
resource "azurerm_linux_virtual_machine" "lab" {
  #checkov:skip=CKV_AZURE_50:extensão necessária para o deploy do container via az vm run-command
  name                  = "vm-devsecops-lab"
  resource_group_name   = azurerm_resource_group.lab.name
  location              = azurerm_resource_group.lab.location
  size                  = "Standard_B2s"
  admin_username        = "azureuser"
  network_interface_ids = [azurerm_network_interface.lab.id]
  custom_data           = filebase64("${path.module}/scripts/setup-vm.sh")

  allow_extension_operations = true

  admin_ssh_key {
    username   = "azureuser"
    public_key = var.ssh_public_key
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "ubuntu-24_04-lts"
    sku       = "server"
    version   = "latest"
  }
}
